--- a/.github/workflows/pages-build-deployment.yml
+++ b/.github/workflows/pages-build-deployment.yml
@@ -1,1 +1,50 @@
+name: pages-build-deployment
 
+on:
+  push:
+    branches: [ main ]
+    paths:
+      - '**.html'
+      - '**.css'
+      - '**.js'
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Start Build Timer
+        run: echo "BUILD_START=$(date +%s)" >> $GITHUB_ENV
+
+      - name: End Build Timer
+        run: |
+          BUILD_END=$(date +%s)
+          echo "Build time: $((BUILD_END - BUILD_START)) seconds"
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install HTMLHint
+        run: npm install -g htmlhint
+      - name: Run HTMLHint
+        run: htmlhint ./ 
+
+  report-build-status:
+    runs-on: ubuntu-latest
+    needs: [build, test]
+    steps:
+      - run: echo "✅ Build and Test Complete"
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: report-build-status
+    steps:
+      - name: Simulate Deployment
+        run: echo "🚀 Deploying to http://muazzz.my/"
+
+      - name: Health Check (Stub)
+        run: echo "🧪 Health check passed" 
+       
